8.1/ru/11-branch.rst
Работа с ветками
==============================

Существует множество способов организации работы с кодом в проекте. Однако фиксировать изменения непосредственно в master-ветке Git и напрямую развёртывать код в продакшен без тестирования, пожалуй, не лучший вариант.

Тестирование — это не только модульные или функциональные тесты, но и проверка поведения приложения с использованием реальных данных. Если вы или ваши `заинтересованные стороны`_ можете просмотреть приложение в том самом виде, в котором оно предстанет перед конечными пользователями, это становится огромным преимуществом и позволяет вам развёртывать приложения с уверенностью. Особенно полезно, когда нетехнические специалисты могут проверять новую функциональность.

Для упрощения и чтобы избежать повторения на следующих шагах мы продолжим работу в master-ветке Git, однако давайте посмотрим, как это можно организовать получше.

Организация рабочего процесса с помощью Git
------------------------------------------------------------------------------

Создание отдельной ветки на каждую новую функциональность или исправление бага — один из простых и эффективных вариантов организации рабочего процесса.

Создание веток
---------------------------

.. index::
    single: Git;branch
    single: Git;checkout

Рабочий процесс начинается с создания ветки в Git:

.. code-block:: terminal
    :class: hide

    $ git branch -D sessions-in-db || true

.. code-block:: terminal

    $ git checkout -b sessions-in-db

Команда из примера создаёт ветку ``sessions-in-db`` из ветки ``master``.  Это действие создаёт ответвление кода и конфигурации инфраструктуры.

Хранение сессий в базе данных
------------------------------------------------------

.. index::
    single: Session;Database

Вероятно, вы уже поняли из названия ветки, что для хранения сессий вместо файловой системы мы будем использовать хранилище базы данных (PostgreSQL в нашем случае).

Необходимые шаги для реализации этого вполне типичны:

#. Создайте новую ветку в Git;

#. Обновите конфигурацию Symfony, если потребуется;

#. При необходимости напишите и/или обновите код;

#. Update the PHP configuration if needed (like adding the PostgreSQL PHP
   extension);

#. При необходимости обновите инфраструктуру Docker и Upsun (добавив сервис PostgreSQL);

#. Протестируйте локально;

#. Протестируйте удалённо;

#. Выполните слияние ветки с основной веткой;

#. Разверните в продакшене;

#. Удалите ветку.

Чтобы хранить сессии в базе данных, измените конфигурационную опцию ``session.handler_id`` на DSN базы данных:

.. code-block:: diff
    :caption: patch_file

    --- i/config/packages/framework.yaml
    +++ w/config/packages/framework.yaml
    @@ -3,7 +3,8 @@ framework:
         secret: '%env(APP_SECRET)%'

         # Note that the session will be started ONLY if you read or write from it.
    -    session: true
    +    session:
    +        handler_id: '%env(resolve:DATABASE_URL)%'

         #esi: true
         #fragments: true

Для хранения сессий в базе данных нам нужно создать таблицу ``sessions``. Создадим её с помощью миграции Doctrine:

.. code-block:: terminal

    $ symfony console make:migration

Примените миграцию к базе данных:

.. code-block:: terminal
    :class: answers(y)

    $ symfony console doctrine:migrations:migrate

Протестируйте сайт на своём компьютере, просматривая различные страницы. Поскольку мы не вносили никаких визуальных изменений и пока не используем сессии, всё должно работать как и раньше.

.. note::

    Пропустите шаги 3–5, поскольку мы повторно используем базу данных в качестве хранилища сессий. В главе про Redis наглядно показано, насколько просто добавить, протестировать и развернуть новый сервис как в Docker, так и в Upsun.

Зафиксируйте изменения в новой ветке:

.. code-block:: terminal
    :class: ignore

    $ git add .
    $ git commit -m'Configure database sessions'

Развёртывание ветки
-------------------------------------

.. index::
    single: Upsun;Environment

Перед развёртыванием в продакшене, мы должны протестировать ветку в окружении ему идентичному. Нам необходимо убедиться, что всё работает корректно в Symfony-окружении ``prod`` (локальный сайт использует окружение ``dev``).

.. index::
    single: Symfony CLI;cloud:env:delete
    single: Symfony CLI;cloud:env:create

Теперь давайте создадим *Upsun-окружение* на основе *Git-ветки*:

.. code-block:: terminal
    :class: hide

    $ symfony cloud:env:delete sessions-in-db

.. code-block:: terminal

    $ symfony cloud:push

Данная команда создаёт новое окружение в следующем порядке:

* Ветка наследует код и инфраструктуру от текущей Git ветки (``sessions-in-db``);

* Данные поступают из основного окружения (т.е. продакшена) путём создания последовательных слепков всех служебных данных, включая файлы (например, загруженные пользователями) и базы данных;

* Создаётся новый выделенный кластер для развёртывания кода, данных и инфраструктуры.

Поскольку развёртывание проходит те же этапы, что и развёртывание в продакшене, миграции базы данных также будут выполнены. Это отличный способ проверить, что миграции работают с данными в продакшене.

Окружения, отличные от ``master``, на самом деле очень на него похожи, но есть небольшие отличия. Например, отправка электронных писем отключена по умолчанию.

.. index::
    single: Symfony CLI;cloud:url

После завершения развёртывания откройте новую ветку в браузере:

.. code-block:: terminal
    :class: ignore

    $ symfony cloud:url -1

Обратите внимание, что все команды Upsun выполняются в пределах текущей Git-ветки. Выполненная выше команда откроет URL-адрес для только что развёрнутой ветки ``sessions-in-db``. Адрес будет выглядеть примерно так: ``https://sessions-in-db-xxx.eu-5.platformsh.site/``.

Протестируйте сайт в новом окружении: вы увидите те же данные, что и в основном окружении.

Если добавить новые конференции в основное окружение (``master``), они не появятся в окружении ``sessions-in-db`` и наоборот, так как окружения являются независимыми и полностью изолированными друг от друга.

Если код изменится в основной ветке, вы всегда можете выполнить перебазирование Git-ветки и развернуть обновлённую версию, разрешив конфликты в коде и инфраструктуре.

.. index::
    single: Symfony CLI;cloud:env:sync

В том числе вы можете синхронизировать данные с основного окружения в окружение ``sessions-in-db``:

.. code-block:: terminal
    :class: answers(y)

    $ symfony cloud:env:sync

Предварительная отладка развёртывания в продакшене
------------------------------------------------------------------------------------------------

.. index::
    single: Upsun;Debugging

По умолчанию все Upsun-окружения используют те же настройки, что и окружение ``master``/``prod`` (то же, что и  окружение ``prod`` в Symfony). Это позволяет протестировать приложение в реальных условиях (как и в продакшене). Таким образом создаётся ощущение разработки и тестирования непосредственно на продакшен-серверах, но без связанных с этим рисков. Мне напоминает это старые добрые времена, когда мы развёртывали проекты через FTP.

.. index::
    single: Symfony CLI;cloud:env:debug

При возникновении проблемы вы можете переключиться на Symfony-окружение ``dev``:

.. code-block:: terminal

    $ symfony cloud:env:debug

Как только закончите, переключитесь обратно к продакшен-настройкам:

.. code-block:: terminal

    $ symfony cloud:env:debug --off

.. warning::

    **Никогда** не активируйте окружение ``dev`` и никогда не используйте профилировщик Symfony, находясь в ветке ``master``, это приведёт к тому, что ваше приложение станет очень медленным и откроет множество серьёзных дыр безопасности.

Предварительное тестирование развёртывания в продакшене
----------------------------------------------------------------------------------------------------------

Возможность предварительного просмотра будущей версии сайта с продакшен-данными открывает широкие возможности: от визуального регрессионного тестирования до тестирования производительности. `Blackfire`_ — идеальный инструмент для такого рода задач.

Перейдите к шагу :doc:`Производительность <29-performance>`, чтобы узнать больше про использование Blackfire для тестирования кода перед развёртыванием.

Развёртывание в продакшене
--------------------------------------------------

.. index::
    single: Symfony CLI;deploy
    single: Git;checkout
    single: Git;merge

Если вы полностью удовлетворены изменениями в ветке с новой функциональностью, выполните слияние кода и инфраструктуры в master-ветку в Git:

.. code-block:: terminal

    $ git checkout master
    $ git merge sessions-in-db

И разверните:

.. code-block:: terminal

    $ symfony cloud:push

При развёртывании в Upsun отправляются только изменения в коде и инфраструктуре; данные останутся такими же, как и были до развёртывания.

Очистка
--------------

.. index::
    single: Symfony CLI;env:delete
    single: Git;branch

В завершение выполните очистку, удалив Git-ветку и Upsun-окружение:

.. code-block:: terminal

    $ git branch -d sessions-in-db
    $ symfony cloud:env:delete -e sessions-in-db

.. sidebar:: Двигаемся дальше

    * `Ветки Git`_;

.. _`заинтересованные стороны`: https://en.wikipedia.org/wiki/Project_stakeholder
.. _`Ветки Git`: https://www.git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell
.. _`Blackfire`: https://blackfire.io
